fix: sidebar, navbar z-index ordering

--- a/client/app/account/profile/profile.less
+++ b/client/app/account/profile/profile.less
@@ -2,7 +2,6 @@
     margin: 15px;
 }
 
-
 .profile-sidebar-content {
     margin: 25px 15px 15px 15px;
     padding: 10px 10px 10px 10px;
@@ -62,7 +61,7 @@
 }
 
 md-sidenav, md-backdrop {
-    position: relative !important;
+    // position: relative !important;
 }
 
 
