--- a/client/components/navbar/navbar.less
+++ b/client/components/navbar/navbar.less
@@ -6,6 +6,7 @@
     padding-top: 15px;
     background-color: #ffffff;
     box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
+    z-index: 0;
 }
 
 .navbar-brand {
